# MIMEAn2

./: .gitignore  CMakeLists.txt  README.md
scripts/: createMIMEProjectFiles.R
source/: CMakeLists.txt  ioTools.cpp
src/: CMakeLists.txt  Parameter.cpp  Parameter.hpp  main.cpp
